--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# RainbowSlides\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/KernelMrex/RainbowSlides#readme",
   "devDependencies": {
+    "jest": "^26.5.2",
     "typescript": "^4.0.3"
   }
 }
