--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/KernelMrex/RainbowSlides#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "jest": "^26.5.2",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
 }
