--- a/package.json
+++ b/package.json
@@ -1,26 +1,40 @@
 {
-  "name": "rainbowslides",
-  "version": "1.0.0",
-  "description": "\"# RainbowSlides\"",
-  "main": "index.js",
+  "name": "rainbow-slides",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "3.4.3",
+    "typescript": "~3.7.2",
+    "@babel/preset-typescript": "^7.10.4",
+    "jest": "^26.5.3",
+    "ts-jest": "^26.4.1"
+  },
   "scripts": {
+    "start": "react-scripts start",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KernelMrex/RainbowSlides.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KernelMrex/RainbowSlides/issues"
-  },
-  "homepage": "https://github.com/KernelMrex/RainbowSlides#readme",
-  "devDependencies": {
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^26.0.14",
-    "jest": "^26.5.3",
-    "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
