--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/react-dom": "^16.9.0",
     "deep-freeze": "^0.0.1",
     "jest": "^26.5.3",
+    "jspdf": "^2.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "ts-jest": "^26.4.1",
     "typescript": "~3.7.2"
   },
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.15"
   }
 }
